[gd_scene load_steps=14 format=3 uid="uid://hoeoow4ned02"]

[ext_resource type="Script" path="res://Levels/Level 0.gd" id="1_qtly1"]
[ext_resource type="Texture2D" uid="uid://csyjsmyupt3u5" path="res://Sprites/Sprites/2048_Is_You.png" id="2_fdd0n"]
[ext_resource type="TileSet" uid="uid://doeyofpqxc1ic" path="res://Tilesets/wall_set.tres" id="2_tkk78"]
[ext_resource type="Theme" uid="uid://cq8prl3lt5y1y" path="res://Themes/main_theme.tres" id="2_y4jbc"]
[ext_resource type="PackedScene" uid="uid://ccfedk60ha7ud" path="res://Enemy/Baddie 1.tscn" id="3_unses"]
[ext_resource type="PackedScene" uid="uid://bs5pnnv5k17ao" path="res://Objects/TileForFSM.tscn" id="4_35c3b"]
[ext_resource type="PackedScene" uid="uid://bs18ouhqw13ql" path="res://Enemy/Baddie 2.tscn" id="4_gmonc"]
[ext_resource type="PackedScene" uid="uid://drayn2lsacylt" path="res://Objects/LevelPeripheryCuller.tscn" id="4_lbtfe"]
[ext_resource type="PackedScene" uid="uid://dhpuql3q1weiw" path="res://Savepoints/Goal_1x2_Concave.tscn" id="6_fpe11"]
[ext_resource type="PackedScene" uid="uid://die53co3fbgij" path="res://Enemy/Baddie 4.tscn" id="8_q5bss"]
[ext_resource type="PackedScene" uid="uid://bn6hebkuibv6r" path="res://Enemy/Baddie 5.tscn" id="9_w18hv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1ucs"]
size = Vector2(159, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxfp6"]
size = Vector2(80, 119)

[node name="Level 0" type="Node2D"]
process_mode = 1
script = ExtResource("1_qtly1")

[node name="Move" type="Label" parent="."]
z_index = -10
offset_left = 41.0
offset_top = 78.0
offset_right = 121.0
offset_bottom = 235.0
theme = ExtResource("2_y4jbc")
text = "press
WASD/
arrow
keys
to
move"

[node name="Restart" type="Label" parent="."]
z_index = -10
offset_left = 134.0
offset_top = 118.0
offset_right = 288.0
offset_bottom = 195.0
theme = ExtResource("2_y4jbc")
text = "press Cmd
/Ctrl+R
to resta-
rt level"

[node name="RestartUnlocker" type="Area2D" parent="Restart"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restart/RestartUnlocker"]
position = Vector2(66.5, 37)
shape = SubResource("RectangleShape2D_y1ucs")

[node name="Shift" type="Label" parent="."]
z_index = -10
offset_left = 521.0
offset_top = 118.0
offset_right = 601.0
offset_bottom = 235.0
theme = ExtResource("2_y4jbc")
text = "press
Shift
+mov-
ement
to
shift"

[node name="ShiftUnlocker" type="Area2D" parent="Shift"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shift/ShiftUnlocker"]
position = Vector2(39, 57.5)
shape = SubResource("RectangleShape2D_xxfp6")

[node name="Revert" type="Label" parent="."]
z_index = -10
offset_left = 297.0
offset_top = 118.0
offset_right = 441.0
offset_bottom = 235.0
theme = ExtResource("2_y4jbc")
text = "    press
    Cmd/
    Ctrl+
    T to
revert to
savepoint"

[node name="RevertUnlocker" type="Area2D" parent="Revert"]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Revert/RevertUnlocker"]
polygon = PackedVector2Array(63, -2, 143, -2, 143, 117, -17, 117, -17, 77, 63, 77)

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_top = 35.0
offset_right = 1600.0
offset_bottom = 1235.0
color = Color(0.345098, 0.345098, 0.345098, 1)

[node name="Title" type="Sprite2D" parent="."]
z_index = -9
position = Vector2(800, 600)
texture = ExtResource("2_fdd0n")

[node name="Walls" type="TileMap" parent="." groups=["wall"]]
tile_set = ExtResource("2_tkk78")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2, 0, 3, 2, 0, 11, 2, 0, 12, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 32, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 39, 2, 0, 65575, 2, 0, 131111, 2, 0, 196647, 2, 0, 262183, 2, 0, 327719, 2, 0, 393255, 2, 0, 458791, 2, 0, 524327, 2, 0, 589863, 2, 0, 655399, 2, 0, 720935, 2, 0, 786471, 2, 0, 852007, 2, 0, 917543, 2, 0, 983079, 2, 0, 1048615, 2, 0, 1114151, 2, 0, 1179687, 2, 0, 1245223, 2, 0, 1310759, 2, 0, 1376295, 2, 0, 1441831, 2, 0, 1507367, 2, 0, 1572903, 2, 0, 1638439, 2, 0, 1703975, 2, 0, 1769511, 2, 0, 1835047, 2, 0, 1900583, 2, 0, 1900582, 2, 0, 1900581, 2, 0, 1900580, 2, 0, 1900579, 2, 0, 1900578, 2, 0, 1900577, 2, 0, 1900576, 2, 0, 1900575, 2, 0, 1900574, 2, 0, 1900573, 2, 0, 1900572, 2, 0, 1900571, 2, 0, 1900570, 2, 0, 1900569, 2, 0, 1900568, 2, 0, 1900567, 2, 0, 1900566, 2, 0, 1900565, 2, 0, 1900564, 2, 0, 1900563, 2, 0, 1900562, 2, 0, 1900561, 2, 0, 1900560, 2, 0, 1900559, 2, 0, 1900558, 2, 0, 1900557, 2, 0, 1900556, 2, 0, 1900555, 2, 0, 1900554, 2, 0, 1900553, 2, 0, 1900552, 2, 0, 1900551, 2, 0, 1900550, 2, 0, 1900549, 2, 0, 1900548, 2, 0, 1900547, 2, 0, 1900546, 2, 0, 1900545, 2, 0, 1900544, 2, 0, 1835008, 2, 0, 1769472, 2, 0, 1703936, 2, 0, 1638400, 2, 0, 1572864, 2, 0, 1507328, 2, 0, 1441792, 2, 0, 1376256, 2, 0, 1310720, 2, 0, 1245184, 2, 0, 1179648, 2, 0, 1114112, 2, 0, 917504, 2, 0, 720896, 2, 0, 655360, 2, 0, 589824, 2, 0, 524288, 2, 0, 458752, 2, 0, 393216, 2, 0, 327680, 2, 0, 262144, 2, 0, 196608, 2, 0, 131072, 2, 0, 65536, 2, 0, 4, 2, 0, 8, 2, 0, 7, 2, 0, 786432, 2, 0, 851968, 2, 0, 983040, 2, 0, 1048576, 2, 0, 1, 2, 0, 2, 2, 0, 65541, 1, 0, 65542, 1, 0, 327687, 1, 0, 327688, 1, 0, 65549, 1, 0, 65550, 1, 0, 196623, 1, 0, 262159, 1, 0, 65545, 1, 0, 65546, 1, 0, 1376288, 2, 0, 1441824, 2, 0, 1507360, 2, 0, 1572896, 2, 0, 1638432, 2, 0)

[node name="Freedom" parent="." instance=ExtResource("4_lbtfe")]

[node name="Tiles" type="Node2D" parent="."]

[node name="Tile2" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(60, 220)
power = 2

[node name="Tile3" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(332, 992)
power = 0

[node name="Tile4" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(100, 220)

[node name="Tile5" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(220, 260)

[node name="Tile6" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(140, 220)

[node name="Tile7" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(140, 180)
power = 2

[node name="Tile8" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(180, 180)

[node name="Tile9" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(180, 220)
power = 2

[node name="Tile10" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 140)

[node name="Tile11" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 180)

[node name="Tile12" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 180)

[node name="Tile13" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 140)
power = 2

[node name="Tile14" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 180)
power = 2

[node name="Tile15" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 100)

[node name="Tile16" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(140, 60)

[node name="Tile17" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 100)
power = 2

[node name="Tile18" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 60)

[node name="Tile19" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 60)
power = 2

[node name="Tile20" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(180, 60)
power = 2

[node name="Tile21" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(140, 100)
power = -1

[node name="Tile22" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(140, 140)
power = -1

[node name="Tile23" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(180, 100)
power = -1

[node name="Tile24" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 100)
power = -1

[node name="Tile25" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 100)
power = -1

[node name="Tile26" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 100)
power = -1

[node name="Tile27" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 180)
power = -1

[node name="Tile28" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 140)
power = -1

[node name="Tile29" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 140)
power = -1

[node name="Tile30" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 100)
power = -1

[node name="Tile31" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 140)
power = -1

[node name="Tile32" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 140)
power = -1

[node name="Tile33" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 180)
power = -1

[node name="Tile34" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 180)
power = -1

[node name="Tile35" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(180, 140)
power = -1

[node name="Tile36" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(220, 100)
power = -1

[node name="Tile37" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(220, 140)
power = -1

[node name="Tile38" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(260, 100)
power = -1

[node name="Tile39" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(260, 140)
power = -1

[node name="Tile40" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(220, 180)
power = -1

[node name="Tile41" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(260, 180)
power = -1

[node name="Tile42" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(100, 260)
power = 2

[node name="Tile43" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(220, 220)
power = 2

[node name="Tile44" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(260, 260)
power = 2

[node name="Tile45" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(260, 220)

[node name="Tile46" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(60, 260)

[node name="Tile47" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 220)
power = 2

[node name="Tile48" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 220)

[node name="Tile49" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 60)
power = 2

[node name="Tile50" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 60)

[node name="Tile51" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 100)
power = 2

[node name="Tile52" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 100)

[node name="Tile53" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 140)
power = 2

[node name="Tile54" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 180)
power = 2

[node name="Tile55" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 140)

[node name="Tile56" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 180)

[node name="Tile57" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 260)
power = 2

[node name="Tile58" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 220)

[node name="Tile59" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 260)
power = 2

[node name="Tile60" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 260)

[node name="Tile61" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 220)
power = 2

[node name="Tile62" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 260)

[node name="Tile63" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 60)
power = 2

[node name="Tile64" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 60)

[node name="Tile65" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 100)
power = 2

[node name="Tile66" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 100)

[node name="Tile67" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 220)
power = 2

[node name="Tile68" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 220)

[node name="Tile69" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 260)
power = 2

[node name="Tile70" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 260)

[node name="Tile71" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 460)

[node name="Tile72" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 460)
power = 2

[node name="Tile73" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 500)
power = 2

[node name="Tile74" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 460)

[node name="Tile75" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 500)
power = 2

[node name="Tile76" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 460)

[node name="Tile77" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 500)
power = 2

[node name="Tile78" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 460)

[node name="Tile79" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1300, 500)

[node name="Tile80" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1300, 700)

[node name="Tile81" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 700)

[node name="Tile82" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 500)

[node name="Tile83" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 500)
power = 2

[node name="Tile84" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1220, 460)

[node name="Tile85" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1220, 500)
power = 2

[node name="Tile86" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 460)

[node name="Tile87" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 500)
power = 2

[node name="Tile88" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 460)

[node name="Tile89" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 500)
power = 2

[node name="Tile90" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 460)

[node name="Tile91" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 500)
power = 2

[node name="Tile92" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 460)

[node name="Tile93" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 500)
power = 2

[node name="Tile94" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 460)

[node name="Tile95" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 500)
power = 2

[node name="Tile96" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 460)

[node name="Tile97" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 500)
power = 2

[node name="Tile98" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(700, 460)

[node name="Tile99" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(700, 500)
power = 2

[node name="Tile100" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(740, 460)

[node name="Tile101" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(740, 500)
power = 2

[node name="Tile102" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(780, 460)

[node name="Tile103" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(780, 500)
power = 2

[node name="Tile104" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(820, 460)

[node name="Tile105" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(820, 500)
power = 2

[node name="Tile106" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(860, 460)

[node name="Tile107" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(860, 500)
power = 2

[node name="Tile108" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(900, 460)

[node name="Tile109" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(900, 500)
power = 2

[node name="Tile110" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(940, 460)

[node name="Tile111" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(940, 500)
power = 2

[node name="Tile112" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(980, 460)

[node name="Tile113" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(980, 500)
power = 2

[node name="Tile114" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1020, 460)

[node name="Tile115" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1020, 500)
power = 2

[node name="Tile116" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1060, 460)

[node name="Tile117" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1060, 500)
power = 2

[node name="Tile118" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1100, 460)

[node name="Tile119" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1100, 500)
power = 2

[node name="Tile120" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1140, 460)

[node name="Tile121" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1140, 500)
power = 2

[node name="Tile122" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1180, 460)

[node name="Tile123" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1180, 740)

[node name="Tile124" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1300, 580)

[node name="Tile125" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1180, 500)
power = 2

[node name="Tile126" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1180, 700)
power = 2

[node name="Tile127" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1220, 740)

[node name="Tile128" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1220, 700)
power = 2

[node name="Tile129" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 740)

[node name="Tile130" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(380, 700)
power = 2

[node name="Tile131" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 740)

[node name="Tile132" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 700)
power = 2

[node name="Tile133" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 740)

[node name="Tile134" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 700)
power = 2

[node name="Tile135" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1140, 740)

[node name="Tile136" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1140, 700)
power = 2

[node name="Tile137" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1100, 740)

[node name="Tile138" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1100, 700)
power = 2

[node name="Tile139" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1060, 740)

[node name="Tile140" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1060, 700)
power = 2

[node name="Tile141" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1020, 740)

[node name="Tile142" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1020, 700)
power = 2

[node name="Tile143" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(980, 740)

[node name="Tile144" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(980, 700)
power = 2

[node name="Tile145" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(940, 740)

[node name="Tile146" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(940, 700)
power = 2

[node name="Tile147" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(900, 740)

[node name="Tile148" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(900, 700)
power = 2

[node name="Tile149" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(860, 740)

[node name="Tile150" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(860, 700)
power = 2

[node name="Tile151" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(820, 740)

[node name="Tile152" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(820, 700)
power = 2

[node name="Tile153" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(780, 740)

[node name="Tile154" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(780, 700)
power = 2

[node name="Tile155" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(740, 740)

[node name="Tile156" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(740, 700)
power = 2

[node name="Tile157" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(700, 740)

[node name="Tile158" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(700, 700)
power = 2

[node name="Tile159" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 740)

[node name="Tile160" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(660, 700)
power = 2

[node name="Tile161" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 740)

[node name="Tile162" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(620, 700)
power = 2

[node name="Tile163" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 740)

[node name="Tile164" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(580, 700)
power = 2

[node name="Tile165" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 740)

[node name="Tile166" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(540, 700)
power = 2

[node name="Tile167" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 740)

[node name="Tile168" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(500, 700)
power = 2

[node name="Tile169" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 740)

[node name="Tile170" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(460, 700)
power = 2

[node name="Tile171" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 740)

[node name="Tile172" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 700)
power = 2

[node name="Tile173" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 620)

[node name="Tile174" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 740)
power = 2

[node name="Tile175" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 620)
power = 2

[node name="Tile176" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 580)

[node name="Tile177" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 580)
power = 2

[node name="Tile178" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 540)

[node name="Tile179" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 540)
power = 2

[node name="Tile180" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(300, 660)

[node name="Tile181" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(340, 660)
power = 2

[node name="Tile182" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1300, 460)
power = 2

[node name="Tile183" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(420, 1016)
power = 2

[node name="Tile184" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 580)
power = 2

[node name="Tile185" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1300, 540)

[node name="Tile186" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 540)
power = 2

[node name="Tile187" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1300, 660)

[node name="Tile188" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 660)
power = 2

[node name="Tile189" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1300, 620)

[node name="Tile190" parent="Tiles" instance=ExtResource("4_35c3b")]
position = Vector2(1260, 620)
power = 2

[node name="SavePoints" type="Node2D" parent="."]

[node name="Goal2" parent="SavePoints" instance=ExtResource("6_fpe11")]
position = Vector2(240, 0)
rotation = -3.14159
to_level = 2
spawn_point = Vector2(240, 60)

[node name="Goal7" parent="SavePoints" instance=ExtResource("6_fpe11")]
position = Vector2(560, 0)
rotation = -3.14159
to_level = 2
id = 1
spawn_point = Vector2(560, 60)

[node name="Goal9" parent="SavePoints" instance=ExtResource("6_fpe11")]
position = Vector2(400, 0)
rotation = -3.14159
to_level = 8
id = 3
spawn_point = Vector2(400, 60)

[node name="Goal8" parent="SavePoints" instance=ExtResource("6_fpe11")]
position = Vector2(680, 160)
rotation = -1.5708
to_level = 8
id = 2
spawn_point = Vector2(620, 160)

[node name="Goal6" parent="SavePoints" instance=ExtResource("6_fpe11")]
position = Vector2(320, 280)
rotation = -3.14159
to_level = 11
id = 5
spawn_point = Vector2(320, 340)

[node name="Goal5" parent="SavePoints" instance=ExtResource("6_fpe11")]
position = Vector2(320, 280)
to_level = 11
id = 4
spawn_point = Vector2(320, 220)

[node name="Baddies" type="Node2D" parent="."]

[node name="Baddie 1" parent="Baddies" instance=ExtResource("8_q5bss")]
position = Vector2(1072, 296)
speed = 10

[node name="Baddie 5" parent="Baddies" instance=ExtResource("3_unses")]
position = Vector2(1304, 232)
vx = -240.0

[node name="Baddie 4" parent="Baddies" instance=ExtResource("4_gmonc")]
position = Vector2(652, 888)
up_direction = Vector2(0, 1)
vy = 1.0

[node name="Baddie 6" parent="Baddies" instance=ExtResource("9_w18hv")]
position = Vector2(896, 992)

[connection signal="body_entered" from="Restart/RestartUnlocker" to="." method="_on_restart_unlocker_body_entered"]
[connection signal="body_entered" from="Shift/ShiftUnlocker" to="." method="_on_shift_unlocker_body_entered"]
[connection signal="body_entered" from="Revert/RevertUnlocker" to="." method="_on_revert_unlocker_body_entered"]
